<resources>
    <string name="app_name">Live Home Radio</string>
    <string name="session_expired">Session Expired!</string>
    <string name="ok">Ok</string>
    <string name="server_error">Server Error</string>
    <string name="welcome_back_you_ve_been_missed">Welcome back, you’ve been missed</string>
    <string name="let_s_sign_you_in">Let’s Sign You In</string>
    <string name="your_email">Your email</string>
    <string name="your_phone">Your phone</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="signin">Sign In</string>
    <string name="or">OR</string>
    <string name="don_apos_t_have_an_account_sign_up">"Don't have an account? Sign Up"</string>
    <string name="explore">Explore</string>
    <string name="otp_authentication">OTP Authentication</string>
    <string name="an_authentication_code_has_been_sent_to_91_999_999_999_0">An Authentication Code has been sent to (+91) 999 999 999 0</string>
    <string name="_00_36_seconds">00:36 Seconds</string>
    <string name="resend">Resend</string>
    <string name="country_state_city">Country, State, City</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="enter_the_email_associated_with_your_account_to_reset_your_password">Enter the Email associated with your account to reset your password.</string>
    <string name="submit">Submit</string>
    <string name="notifications">Notifications</string>
    <string name="recent">Recent</string>
    <string name="older_notification">Older notification</string>
    <string name="you_made_kes_29_05_payment_to_connor_chavez_for_your_ride">You made KES 29.05 payment to Connor Chavez for your ride</string>
    <string name="cancel">Cancel</string>
    <string name="type_a_message">Type a message...</string>
    <string name="welcome">Welcome</string>
    <string name="exit_message">Are you sure? you want to exit?</string>
    <string name="settings">Settings</string>
    <string name="contact_us">Contact Us</string>
    <string name="save">Save</string>
    <string name="current_password">Current Password</string>
    <string name="reenter_password">"Re- Enter New Password "</string>
    <string name="new_password">New Password</string>
    <string name="history">History</string>
    <string name="dashboard">Dashboard</string>
    <string name="current_listeners">Current Listeners</string>
    <string name="current_song">Current Song</string>
    <string name="total_memory_used">Total Memory Used</string>
    <string name="make_call">Make Call</string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="asterisk">*</string>
    <string name="zero">0</string>
    <string name="hash">#</string>
    <string name="dial">Dial</string>
    <string name="backspace">&lt;=</string>
    <string name="some_error_occured">Some Error Occured!</string>
    <string name="incoming_calls">Calls</string>
    <string name="ongoing_call">Ongoing call</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="search">Search..</string>
    <string name="logout_message">AreYou Sure? You want to logout!</string>
    <string name="remember_me">Remember me</string>
</resources>