<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.livehomeradio.views.notifications.NotificationsVM" />
    </data>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".views.bookings.MyBookings">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:elevation="@dimen/_5sdp"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:text="@string/notifications"
            android:textColor="@color/black"
            android:textSize="@dimen/sp18" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_15sdp"
                    android:fontFamily="@font/poppins_medium"
                    android:letterSpacing="-0.02"
                    android:lineSpacingExtra="7sp"
                    android:text="@string/recent"
                    android:textColor="#696565"
                    android:textSize="14sp"
                    android:textStyle="normal" />

                <androidx.recyclerview.widget.RecyclerView
                    setRecyclerAdapter="@{viewModel.recentAdapter}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/_10sdp"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="2"
                    tools:listitem="@layout/notification_adapter" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_15sdp"
                    android:fontFamily="@font/poppins_medium"
                    android:letterSpacing="-0.02"
                    android:lineSpacingExtra="7sp"
                    android:text="@string/older_notification"
                    android:textColor="#696565"
                    android:textSize="14sp"
                    android:textStyle="normal" />

                <androidx.recyclerview.widget.RecyclerView
                    setRecyclerAdapter="@{viewModel.olderAdapter}"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="@dimen/_10sdp"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/notification_adapter" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>
</layout>