<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.livehomeradio.views.MainVM" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.BaseActivity">

        <fragment
            android:id="@+id/fragmentContainer"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:defaultNavHost="true"
            app:layout_constraintBottom_toTopOf="@id/llBottomSheet"
            app:layout_constraintTop_toTopOf="parent"
            app:navGraph="@navigation/nav_graph" />

        <LinearLayout
            android:id="@+id/llBottomSheet"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:elevation="@dimen/_5sdp"
            android:orientation="horizontal"
            android:visibility="@{viewModel.isBottom ? View.VISIBLE : View.GONE}"
            android:weightSum="3"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/ripple"
                android:gravity="center"
                android:onClick="@{viewModel::clickHome}"
                android:orientation="vertical"
                android:paddingVertical="@dimen/_6sdp">

                <ImageView
                    setTint="@{viewModel.isHome}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_home" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center"
                    android:lineSpacingExtra="6sp"
                    android:text="@string/dashboard"
                    android:textColor="@{viewModel.isHome?@color/_7cb0e1: @color/_b4b3b3}"
                    android:textSize="12sp"
                    android:textStyle="normal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/ripple"
                android:gravity="center"
                android:onClick="@{viewModel::clickBooking}"
                android:orientation="vertical"
                android:paddingVertical="@dimen/_6sdp">

                <ImageView
                    setTint="@{viewModel.isBookings}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_bookings" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center"
                    android:lineSpacingExtra="6sp"
                    android:text="@string/history"
                    android:textColor="@{viewModel.isBookings?@color/_7cb0e1: @color/_b4b3b3}"
                    android:textSize="12sp"
                    android:textStyle="normal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:visibility="gone"
                android:background="@drawable/ripple"
                android:gravity="center"
                android:onClick="@{viewModel::clickNotifications}"
                android:orientation="vertical"
                android:paddingVertical="@dimen/_6sdp">

                <ImageView
                    setTint="@{viewModel.isNotifications}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_notifications" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center"
                    android:lineSpacingExtra="6sp"
                    android:text="@string/notifications"
                    android:textColor="@{viewModel.isNotifications?@color/_7cb0e1: @color/_b4b3b3}"
                    android:textSize="12sp"
                    android:textStyle="normal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/ripple"
                android:gravity="center"
                android:onClick="@{viewModel::clickPayments}"
                android:orientation="vertical"
                android:paddingVertical="@dimen/_6sdp">

                <ImageView
                    setTint="@{viewModel.isPayments}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_settings" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center"
                    android:lineSpacingExtra="6sp"
                    android:text="@string/settings"
                    android:textColor="@{viewModel.isPayments?@color/_7cb0e1: @color/_b4b3b3}"
                    android:textSize="12sp"
                    android:textStyle="normal" />

            </LinearLayout>


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>